fix: transition no longer change z-index

--- a/src/components/UI/header/slider/sliderTransition.module.css
+++ b/src/components/UI/header/slider/sliderTransition.module.css
@@ -6,12 +6,10 @@
 .enter {
   opacity: 0;
   transform: scale(0.8);
-  z-index: 5;
 }
 .enterActive {
   opacity: 0.4;
   transform: scale(1);
-  z-index: 5;
 }
 .exit {
   transform: scale(1);
